--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "displayName": "Flask Builder",
   "description": "A Visual Studio Code extension to quickly scaffold a Flask application with necessary modules, Docker support, and OOP-style tests.",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rabinhansda24/flask-builder"
+  },
   "engines": {
     "vscode": "^1.91.0"
   },
