chore: Add MIT license to the project

--- a/package.json
+++ b/package.json
@@ -65,5 +65,6 @@
     "webpack-cli": "^5.1.4",
     "@vscode/test-cli": "^0.0.9",
     "@vscode/test-electron": "^2.4.0"
-  }
+  },
+  "license": "MIT"
 }
