--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "displayName": "Flask Builder",
   "description": "A Visual Studio Code extension to quickly scaffold a Flask application with necessary modules, Docker support, and OOP-style tests.",
   "version": "1.1.0",
+  "author": {
+    "name": "Rabin Hansda",
+    "email": "rabinhansda24@live.com"
+  },
+  "icon": "images/logo.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/rabinhansda24/flask-builder"
@@ -53,18 +58,18 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.91.0",
     "@types/mocha": "^10.0.7",
     "@types/node": "20.x",
+    "@types/vscode": "^1.91.0",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.11.0",
-    "eslint": "^8.57.0",
-    "typescript": "^5.4.5",
-    "ts-loader": "^9.5.1",
-    "webpack": "^5.92.1",
-    "webpack-cli": "^5.1.4",
     "@vscode/test-cli": "^0.0.9",
-    "@vscode/test-electron": "^2.4.0"
+    "@vscode/test-electron": "^2.4.0",
+    "eslint": "^8.57.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5",
+    "webpack": "^5.92.1",
+    "webpack-cli": "^5.1.4"
   },
   "license": "MIT"
 }
