--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "flask-builder",
   "displayName": "Flask Builder",
-  "description": "A Visual Studio Code extension to quickly scaffold a Flask application with necessary modules, Docker support, and OOP-style tests.",
-  "version": "1.1.2",
+  "description": "A Visual Studio Code extension to quickly scaffold a Flask application with necessary modules, Docker support, integration and unit tests.",
+  "version": "1.1.3",
   "author": {
     "name": "Rabin Hansda",
     "email": "rabinhansda24@live.com"
@@ -30,6 +30,10 @@
       {
         "command": "extension.createFlaskApp",
         "title": "Create Flask App"
+      },
+      {
+        "command": "extension.createFlaskModule",
+        "title": "Create Flask Module"
       }
     ],
     "menus": {
@@ -41,6 +45,11 @@
         },
         {
           "command": "extension.createFlaskApp",
+          "when": "explorerResourceIsFolder",
+          "group": "navigation"
+        },
+        {
+          "command": "extension.createFlaskModule",
           "when": "explorerResourceIsFolder",
           "group": "navigation"
         }
