--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flask-builder",
   "displayName": "Flask Builder",
   "description": "A Visual Studio Code extension to quickly scaffold a Flask application with necessary modules, Docker support, integration and unit tests.",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "author": {
     "name": "Rabin Hansda",
     "email": "rabinhansda24@live.com"
@@ -89,20 +89,30 @@
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "lint": "eslint src --ext ts",
-    "test": "vscode-test"
+    "test": "tsc -p . && node ./out/test/runTest.js"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.17",
+    "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.7",
     "@types/node": "20.x",
+    "@types/sinon": "^17.0.3",
     "@types/vscode": "^1.91.0",
     "@typescript-eslint/eslint-plugin": "^7.14.1",
     "@typescript-eslint/parser": "^7.11.0",
     "@vscode/test-cli": "^0.0.9",
     "@vscode/test-electron": "^2.4.0",
+    "chai": "^5.1.1",
     "copy-webpack-plugin": "^12.0.2",
     "eslint": "^8.57.0",
+    "glob": "^11.0.0",
+    "minimatch": "^3.0.4",
+    "mocha": "^10.7.3",
+    "sinon": "^18.0.0",
     "ts-loader": "^9.5.1",
-    "typescript": "^5.4.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4",
+    "vscode-test": "^1.6.1",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4"
   },
