--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,22 @@
 {
 	"compilerOptions": {
-		"module": "Node16",
+		"module": "CommonJS",
+		"esModuleInterop": true,
+		"allowSyntheticDefaultImports": true,
 		"target": "ES2022",
 		"lib": [
 			"ES2022"
 		],
 		"sourceMap": true,
 		"rootDir": "src",
-		"strict": true   /* enable all strict type-checking options */
+		"strict": true, /* enable all strict type-checking options */
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	}
+		"outDir": "./out",
+		"resolveJsonModule": true
+	},
+	"include": [ "src/**/*.ts" ],
+	"exclude": [ "node_modules" ]
 }
