--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flask-builder",
   "displayName": "Flask Builder",
-  "description": "A Visual Studio Code extension to quickly scaffold a Flask application with necessary modules, Docker support, integration and unit tests.",
+  "description": "A Visual Studio Code extension to quickly scaffold a Flask application with necessary modules, Docker support, Swagger for API documentation, integration and unit tests.",
   "version": "1.1.5",
   "author": {
     "name": "Rabin Hansda",
